[package]
name = "plain-floor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11.5", features = ["http", "tokio"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
